--- a/code4every1site/templates/flatpages/aboutus.html
+++ b/code4every1site/templates/flatpages/aboutus.html
@@ -1,13 +1,6 @@
 {% extends "flatpages/default.html" %}
-{% load staticfiles %}
-
+{% load load_static %}
 
 {% block content %}
-<a name="top"></a>
-<div class="android-be-together-section mdl-typography--text-center" style="background: url({% static 'landingsite/images/slide01.jpg' %})
-center 30% no-repeat;height:330px;">
-  <div class="android-font android-slogan">Code for Everyone</div>
-  <div class="android-font android-sub-slogan">About us</div>
-</div>
-{{ flatpage.content|safe }}
+{{ flatpage.content|load_static }}
 {% endblock content %}
