delete aboutus flat page. moved it to default

--- a/code4every1site/templates/flatpages/default.html
+++ b/code4every1site/templates/flatpages/default.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
+{% load load_static %}
 
-{% block title_tag %}
-  <title>{{ flatpage.title }}</title>
-{% endblock title_tag %}
+{% block content %}
+{{ flatpage.content|load_static }}
+{% endblock content %}
