--- a/rsvp/templates/rsvp/events_list.html
+++ b/rsvp/templates/rsvp/events_list.html
@@ -21,11 +21,6 @@
             {% if upcoming_events or past_events %}
               {% for event in upcoming_events %}
               <div class="mdl-cell mdl-cell--3-col mdl-cell--4-col-tablet mdl-cell--4-col-phone mdl-card mdl-shadow--3dp">
-                <div class="mdl-card__media">
-                  {% if hack.cover_photo %}
-                  <img src="{{ hack.cover_photo.url }}">
-                  {% endif %}
-                </div>
                 <div class="mdl-card__title">
                    <h4 class="mdl-card__title-text">{{ event.title }}</h4>
                 </div>
@@ -33,7 +28,7 @@
                   <span class="mdl-typography--font-light mdl-typography--subhead">{{ event.notes|truncatechars:100 }}</span>
                 </div>
                 <div class="mdl-card__actions">
-                   <a class="android-link mdl-button mdl-js-button mdl-typography--text-uppercase" href="{{ event.title }}">
+                   <a class="android-link mdl-button mdl-js-button mdl-typography--text-uppercase" href="{{ event.slug }}">
                     Learn More
                      <i class="material-icons">chevron_right</i>
                    </a>
@@ -45,11 +40,6 @@
               <div class="android-card-container mdl-grid" id="posts">
               {% for event in past_events %}
               <div class="mdl-cell mdl-cell--3-col mdl-cell--4-col-tablet mdl-cell--4-col-phone mdl-card mdl-shadow--3dp">
-                <div class="mdl-card__media">
-                  {% if hack.cover_photo %}
-                  <img src="{{ hack.cover_photo.url }}">
-                  {% endif %}
-                </div>
                 <div class="mdl-card__title">
                    <h4 class="mdl-card__title-text">{{ event.title }}</h4>
                 </div>
@@ -57,7 +47,7 @@
                   <span class="mdl-typography--font-light mdl-typography--subhead">{{ event.notes|truncatechars:100 }}</span>
                 </div>
                 <div class="mdl-card__actions">
-                   <a class="android-link mdl-button mdl-js-button mdl-typography--text-uppercase" href="{{ event.title }}">
+                   <a class="android-link mdl-button mdl-js-button mdl-typography--text-uppercase" href="{{ event.slug }}">
                     Learn More
                      <i class="material-icons">chevron_right</i>
                    </a>
