--- a/rsvp/templates/rsvp/events_list.html
+++ b/rsvp/templates/rsvp/events_list.html
@@ -35,7 +35,7 @@
                 </h5>
                 </div>
                 <div class="mdl-card__actions mdl-card--border">
-                  <a href="{% url event %}" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+                  <a href="{% url 'rsvp:event_detail' event.slug %}" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
                     More Details
                   </a>
                   <div class="mdl-layout-spacer"></div>
