--- a/rsvp/templates/rsvp/event_detail.html
+++ b/rsvp/templates/rsvp/event_detail.html
@@ -10,7 +10,7 @@
 <div class="mdl-grid">
 
   <div class="mdl-cell mdl-cell--2-col">
-  </div>  
+  </div>
   <div class="mdl-cell mdl-cell--8-col">
     <div class="center-align">
       <h2>{{ event.title }}</h2>
@@ -26,6 +26,9 @@
       {% elif rsvp and rsvp.first.attending %}
         <button class="rsvp-submit right mdl-button mdl-js-button mdl-button--raised" data-event-id="{{ event.id }}">Un-rsvp<img class='loading hidden' src="{% static 'rsvp/loading.gif' %}" alt=""></button>
       {% endif %}
+      {%for rsvp in rsvplist%}
+        {{rsvp.user.username}}
+      {%endfor%}
     {% endif %}
 
   </div>
@@ -46,12 +49,11 @@
         $this.html($this.text() == 'RSVP' ? 'un-RSVP' : 'RSVP');
       }).fail(function(data){
         alert('Something went wrong. Please try again later.');
-      })   
-      
+      })
+
     })
   })
 
 </script>
 
 {% endblock content %}
-
