--- a/rsvp/templates/rsvp/events_list.html
+++ b/rsvp/templates/rsvp/events_list.html
@@ -1,8 +1,10 @@
 {% extends "base.html" %}
 {% load staticfiles %}
+{% load tz %}
 
 {% block css %}
   <link rel="stylesheet" type="text/css" href="{% static 'rsvp/css/event_list.css'%}">
+  <link rel="stylesheet" type="text/css" href="{% static 'rsvp/lib/fullcalendar.min.css'%}">
 {% endblock css %}
 
 {% block content %}
@@ -20,58 +22,38 @@
           </a>
         </div>
         <div class="android-more-section">
-          <div class="android-section-title mdl-typography--display-1-color-contrast">Upcoming Events</div>
           <div class="android-card-container mdl-grid" id="posts">
-            {% if upcoming_events or past_events %}
-              {% for event in upcoming_events %}
-              <div class="demo-card-event mdl-card mdl-shadow--2dp">
-                <div class="mdl-card__title mdl-card--expand">
-                <h4>
-                  {{ event.title }}
-                </h4>
-                <h5>
-                  {{ event.start_time.date }}<br>
-                  {{ event.start_time.time }} - {{ event.end_time.time }}
-                </h5>
-                </div>
-                <div class="mdl-card__actions mdl-card--border">
-                  <a href="{% url 'rsvp:event_detail' event.slug %}" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
-                    More Details
-                  </a>
-                  <div class="mdl-layout-spacer"></div>
-                  <i class="material-icons">event</i>
-                </div>
-              </div>
-              {% endfor %}
-              </div>
-              <div class="android-section-title mdl-typography--display-1-color-contrast">Past Events</div>
-              <div class="android-card-container mdl-grid" id="posts">
-              {% for event in past_events %}
-              <div class="demo-card-event mdl-card mdl-shadow--2dp">
-                <div class="mdl-card__title mdl-card--expand">
-                  <h4>
-                    {{ event.title }}
-                  </h4>
-                  <br>
-                  <h5>
-                    {{ event.start_time.date }}<br>
-                    {{ event.start_time.time }} - {{ event.end_time.time }}
-                  </h5>
-                </div>
-                <div class="mdl-card__actions mdl-card--border">
-                  <a href="{% url 'rsvp:event_detail' event.slug %}" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
-                    More Details
-                  </a>
-                  <div class="mdl-layout-spacer"></div>
-                  <i class="material-icons">event</i>
-                </div>
-              </div>
-              {% endfor %}
-            {% else %}
-            <h2>No Events available</h2>
-            {% endif %}
-
+            <div id='calendar'></div>
           </div>
         </div>
 
 {% endblock content %}
+
+{% block endjs %}
+    <script src="{% static 'rsvp/lib/moment.min.js'%}"></script>
+    <script src="{% static 'rsvp/lib/fullcalendar.min.js'%}"></script>
+    <script>
+      $(document).ready(function() {
+        
+        $('#calendar').fullCalendar({
+          header: {
+            left: 'prev,next today',
+            center: 'title',
+            right: 'month,basicWeek,basicDay'
+          },
+          eventLimit: true, // allow "more" link when too many events
+          events: [
+          {% for event in events %}
+            {
+              'title': "{{event.title}}",
+              'start': "{{event.start_time|date:'c'}}",
+              'end': "{{event.end_time|date:'c'}}",
+              'url': "{% url 'rsvp:event_detail' event.slug %}"
+            },
+          {% endfor %}
+          ]
+        });
+        
+      });
+    </script>
+{% endblock endjs %}
