--- a/rsvp/templates/rsvp/event_detail.html
+++ b/rsvp/templates/rsvp/event_detail.html
@@ -16,8 +16,8 @@
   </div>
   <div class="mdl-cell mdl-cell--8-col">
     <div class="center-align">
-      <p>{{ event.notes|markdown_safe }}</p>
-      <p>{{ event.start_time }} to {{ event.end_time }}</p>
+      <div><i class="material-icons md-48">event_note</i><p>{{ event.notes|markdown_safe }}</p></div>
+      <div><i class="material-icons md-48">access_time</i><p>{{ event.start_time }} to {{ event.end_time }}</p></div>
       <div>
         <i class="material-icons md-48">people_outline</i>
         <p>Spaces Left: <span class="spaces-left">{{ spaces_left }}</span>/{{ event.capacity }}</p>
@@ -32,8 +32,7 @@
         <button class="rsvp-submit right mdl-button mdl-js-button mdl-button--raised" data-event-id="{{ event.id }}">Un-rsvp<img class='loading hidden' src="{% static 'rsvp/loading.gif' %}" alt=""></button>
       {% endif %}
       {% if event.location %}
-      <div class="location"><p>{{ event.location|safe }}</p>
-    </div>
+      <div class="location"><p>{{ event.location|safe }}</p></div>
       {% endif %}
   </div>
 
