added source button to footer

--- a/code4every1site/templates/base.html
+++ b/code4every1site/templates/base.html
@@ -187,14 +187,17 @@
               </a>
             </div>
           </div>
-
           <div class="mdl-mega-footer--bottom-section">
             <a class="android-link mdl-typography--font-light" href="/hacks/">Hacks</a>
             <a class="android-link mdl-typography--font-light" href="http://mooccircle.github.io">MOOC Circle</a>
             <a class="android-link mdl-typography--font-light" href="https://github.com/CodeforeveryoneSeoul/codeforeveryone/commit/{{ git_hash }}">
               {{ git_hash }}
             </a>
+            <div class = "mdl-mega-footer--right-section">
+              <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast"><a href="https://github.com/MOOCCircle/codeforeveryone">View Source</a></button>
+            </div>
           </div>
+
         </footer>
       </div>
     </div>
