--- a/landingsite/templates/landingsite/index.html
+++ b/landingsite/templates/landingsite/index.html
@@ -6,7 +6,7 @@
 <a name="top"></a>
 <div class="android-be-together-section mdl-typography--text-center" style="background: url({% static 'landingsite/images/slide01.jpg' %})
 center 30% no-repeat;">
-  <div class="android-font android-slogan">print ("Code For Everyone")</div>
+  <div class="android-font android-slogan">print ("Django Girls Seoul")</div>
   
   <div class="android-font android-sub-slogan">Be yourself. Do your thing. See what's going on.</div>
 
@@ -30,7 +30,7 @@ center 30% no-repeat;">
 </div>
 <div class="android-customized-section">
   <div class="android-customized-section-text">
-    <div class="mdl-typography--font-light mdl-typography--display-1-color-contrast">Workshops and Hackathons</div>
+    <div class="mdl-typography--font-light mdl-typography--display-1-color-contrast">Workshops and Events</div>
     <p class="mdl-typography--font-light">
 
       <br>
