fixed logo and menu

--- a/accounts/templates/registration/register.html
+++ b/accounts/templates/registration/register.html
@@ -21,7 +21,7 @@
             <div>
               <input type="hidden" name="next" value="{% url 'landingsite:index' %}" />
               <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored" type="submit">
-                Login
+                Submit
               </button>
             </div> 
         </form>
