add first and last name fields

--- a/accounts/templates/registration/login.html
+++ b/accounts/templates/registration/login.html
@@ -6,7 +6,7 @@
     <div class="mdl-grid">
       <div class="mdl-cell mdl-cell--4-col"></div>
       <div class="mdl-cell mdl-cell--4-col">
-        <h2>login</h2>
+        <h2>Login</h2>
         {% if form.errors %}
         <p>Your username and password didn't match. Please try again.</p>
         {% endif %}
@@ -17,13 +17,14 @@
                 {{ field|addcss:"mdl-textfield__input" }}
                 <label class="mdl-textfield__label" for="{{field.id_for_label}}">{{ field.label }}</label>
               </div>
+              {{ field.errors }}
             {% endfor %}
             <input type="hidden" name="next" value="{% url 'landingsite:index' %}" />
             <div>
               <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored" type="submit">
                 Login
               </button>
-            </div> 
+            </div>
         </form>
       </div>
       <div class="mdl-cell mdl-cell--4-col"></div>
