--- a/accounts/templates/registration/register.html
+++ b/accounts/templates/registration/register.html
@@ -6,9 +6,9 @@
     <div class="mdl-grid">
       <div class="mdl-cell mdl-cell--4-col"></div>
       <div class="mdl-cell mdl-cell--4-col">
-        <h2>register</h2>
+        <h2>Register</h2>
         {% if form.errors %}
-        <p>Something went wrong. Blame jin.</p>
+        <p>Fix below issues and try again.</p>
         {% endif %}
         <form method="post" action="{% url 'accounts:register' %}">
             {% csrf_token %}
@@ -16,6 +16,7 @@
               <div class="mdl-textfield mdl-js-textfield">
                 {{ field|addcss:"mdl-textfield__input" }}
                 <label class="mdl-textfield__label" for="{{field.id_for_label}}">{{ field.label }}</label>
+                {{ field.errors }}
               </div>
             {% endfor %}
             <div>
@@ -23,7 +24,7 @@
               <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored" type="submit">
                 Submit
               </button>
-            </div> 
+            </div>
         </form>
       </div>
       <div class="mdl-cell mdl-cell--4-col"></div>
