--- a/rsvp/templates/rsvp/event_detail.html
+++ b/rsvp/templates/rsvp/event_detail.html
@@ -44,7 +44,11 @@
         <li class="mdl-list__item">
           <span class="mdl-list__item-primary-content">
           <i class="material-icons mdl-list__item-icon">person</i>
-          {{rsvp.user.username}}
+          {% if rsvp.user.first_name %}
+          {{ rsvp.user.first_name }}
+          {% else %}
+          {{ rsvp.user.username }}
+          {% endif %}
           </span>
       </li>
       {% endfor %}
