fixed layout, navbar needs a look- not toggling

--- a/accounts/templates/registration/login.html
+++ b/accounts/templates/registration/login.html
@@ -3,7 +3,16 @@
 {% load form_tags %}
 
 {% block content %}
-    <div class="mdl-grid">
+<div class="text-center titlebackground" style="background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ),url({% static 'landingsite/images/slide01.jpg' %})
+        center 30% no-repeat;height:400px; ">
+        <div class="row titlerow">
+          <div class="col-md-12 text-center">
+          <h1 class="text-white"><strong>Welcome back!</strong></h1>
+
+          </div>
+        </div>
+       </div>
+    <div class="mdl-grid login">
       <div class="mdl-cell mdl-cell--4-col"></div>
       <div class="mdl-cell mdl-cell--4-col">
         <h2>Login</h2>
