--- a/rsvp/static/rsvp/css/event_detail.css
+++ b/rsvp/static/rsvp/css/event_detail.css
@@ -18,12 +18,13 @@
 .eventcontainer {
 	padding-bottom: 50px;
 	padding-top: 50px;
+	min-height: 300px;
 }
 .titlerow {
   padding-top: 200px;
 }
 .titlebackground {
-   display: table;
+  display: table;
   width: 100%;
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5))
   background-position: center top;
