--- a/accounts/templates/registration/register.html
+++ b/accounts/templates/registration/register.html
@@ -3,6 +3,15 @@
 {% load form_tags %}
 
 {% block content %}
+<div class="text-center titlebackground" style="background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ),url({% static 'landingsite/images/slide01.jpg' %})
+        center 30% no-repeat;height:400px; ">
+        <div class="row titlerow">
+          <div class="col-md-12 text-center">
+          <h1 class="text-white"><strong>Want to Learn Programming?</strong></h1>
+          <h3 class="text-white"> Join Us!</h3>
+          </div>
+        </div>
+        </div>
     <div class="mdl-grid">
       <div class="mdl-cell mdl-cell--4-col"></div>
       <div class="mdl-cell mdl-cell--4-col">
