--- a/code4every1site/templates/base.html
+++ b/code4every1site/templates/base.html
@@ -1,11 +1,24 @@
 {% load staticfiles %}
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!-->
-<html class="no-js"> <!--<![endif]-->
+<html class="no-js">
     <head>
+        <meta name="mobile-web-app-capable" content="yes">
+        <link rel="shortcut icon" href="{% static 'landingsite/images/favicon.ico' %}" type="image/x-icon">
+        <link rel="icon" href="{% static 'landingsite/images/favicon.ico' %}" type="image/x-icon">
+        <!-- Add to homescreen for Safari on iOS -->
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-status-bar-style" content="black">
+        <meta name="apple-mobile-web-app-title" content="Django Girls Seoul">
+        <!-- Tile icon for Win8 (144x144 + tile color) -->
+        <meta name="msapplication-TileColor" content="#3372DF">
+        <!-- Page styles -->
+        <link href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <link rel="stylesheet" href="https://storage.googleapis.com/code.getmdl.io/1.1.1/material.indigo-pink.min.css" />
+        <link rel="stylesheet" href="{% static 'landingsite/css/styles.css' %}">
+        <link rel="stylesheet" href="{% static 'landingsite/css/messages.css' %}">
+        <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,400,300,600,700%7CRaleway:700' rel='stylesheet' type='text/css'>
+        <script src="{% static 'landingsite/js/modernizr-2.6.2-respond-1.1.0.min.js' %}"></script>
         <meta charset="utf-8">
         <title>Django Girls Seoul Code Camp</title>
         <meta name="description" content="">
@@ -19,177 +32,169 @@
         <link href="{% static 'landingsite/css/theme.css' %}" rel="stylesheet" type="text/css" media="all"/>
         <link href="{% static 'landingsite/css/custom.css' %}" rel="stylesheet" type="text/css" media="all"/>
         <!--[if gte IE 9]>
-        	<link rel="stylesheet" type="text/css" href="css/ie9.css" />
-		<![endif]-->
-        <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,400,300,600,700%7CRaleway:700' rel='stylesheet' type='text/css'>
-        <script src="{% static 'landingsite/js/modernizr-2.6.2-respond-1.1.0.min.js' %}"></script>
-
-    <style>
-    #view-source {
-      position: fixed;
-      display: block;
-      right: 0;
-      bottom: 0;
-      margin-right: 40px;
-      margin-bottom: 40px;
-      z-index: 900;
-    }
-    </style>
-    <!-- Analytics -->
-    <script type="text/javascript">
-    !function(){var analytics=window.analytics=window.analytics||[];if(!analytics.initialize)if(analytics.invoked)window.console&&console.error&&console.error("Segment snippet included twice.");else{analytics.invoked=!0;analytics.methods=["trackSubmit","trackClick","trackLink","trackForm","pageview","identify","group","track","ready","alias","page","once","off","on"];analytics.factory=function(t){return function(){var e=Array.prototype.slice.call(arguments);e.unshift(t);analytics.push(e);return analytics}};for(var t=0;t<analytics.methods.length;t++){var e=analytics.methods[t];analytics[e]=analytics.factory(e)}analytics.load=function(t){var e=document.createElement("script");e.type="text/javascript";e.async=!0;e.src=("https:"===document.location.protocol?"https://":"http://")+"cdn.segment.com/analytics.js/v1/"+t+"/analytics.min.js";var n=document.getElementsByTagName("script")[0];n.parentNode.insertBefore(e,n)};analytics.SNIPPET_VERSION="3.0.1";
-    analytics.load("st84JOhemrqvWhw6f3XEsQ23wR1ORRcz");
-    analytics.page()
-    }}();
-  </script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
-  <script>
-    var csrftoken = $.cookie('csrftoken');
-    function csrfSafeMethod(method) {
-        // these HTTP methods do not require CSRF protection
-        return (/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));
-    }
-    $.ajaxSetup({
-        beforeSend: function(xhr, settings) {
-            if (!csrfSafeMethod(settings.type) && !this.crossDomain) {
-                xhr.setRequestHeader("X-CSRFToken", csrftoken);
+        <link rel="stylesheet" type="text/css" href="css/ie9.css" />
+        <![endif]-->
+        <style>
+            #view-source {
+            position: fixed;
+            display: block;
+            right: 0;
+            bottom: 0;
+            margin-right: 40px;
+            margin-bottom: 40px;
+            z-index: 900;
             }
-        }
-    });
-  </script>
-  {% block css %}{% endblock css %}
+        </style>
+        <!-- Analytics -->
+        <script type="text/javascript">
+            !function(){var analytics=window.analytics=window.analytics||[];if(!analytics.initialize)if(analytics.invoked)window.console&&console.error&&console.error("Segment snippet included twice.");else{analytics.invoked=!0;analytics.methods=["trackSubmit","trackClick","trackLink","trackForm","pageview","identify","group","track","ready","alias","page","once","off","on"];analytics.factory=function(t){return function(){var e=Array.prototype.slice.call(arguments);e.unshift(t);analytics.push(e);return analytics}};for(var t=0;t<analytics.methods.length;t++){var e=analytics.methods[t];analytics[e]=analytics.factory(e)}analytics.load=function(t){var e=document.createElement("script");e.type="text/javascript";e.async=!0;e.src=("https:"===document.location.protocol?"https://":"http://")+"cdn.segment.com/analytics.js/v1/"+t+"/analytics.min.js";var n=document.getElementsByTagName("script")[0];n.parentNode.insertBefore(e,n)};analytics.SNIPPET_VERSION="3.0.1";
+            analytics.load("st84JOhemrqvWhw6f3XEsQ23wR1ORRcz");
+            analytics.page()
+            }}();
+        </script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
+        <script>
+            var csrftoken = $.cookie('csrftoken');
+            function csrfSafeMethod(method) {
+                // these HTTP methods do not require CSRF protection
+                return (/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));
+            }
+            $.ajaxSetup({
+                beforeSend: function(xhr, settings) {
+                    if (!csrfSafeMethod(settings.type) && !this.crossDomain) {
+                        xhr.setRequestHeader("X-CSRFToken", csrftoken);
+                    }
+                }
+            });
+        </script>
+        {% block css %}{% endblock css %}
     </head>
     <body>
-    	<div class="loader">
-    		<div class="spinner">
-			  <div class="double-bounce1"></div>
-			  <div class="double-bounce2"></div>
-			</div>
-    	</div>
-
-		<div class="nav-container">
-			<nav class="top-bar overlay-bar">
-				<div class="container">
-
-					<div class="row nav-menu">
-						<div class="col-md-3 col-sm-3 columns">
-							<img class="logo logo-light" alt="Logo" src="{% static 'landingsite/images/dgseoul-transparent-orange.png' %}">
-							<img class="logo logo-dark" alt="Logo" src="{% static 'landingsite/images/dgseoul-transparent-orange.png' %}">
-						</div>
-
-						<div class="col-md-9 col-sm-9 columns">
-							<ul class="menu">
-								<li><a href="/#team">Team</a></li>
-								<li><a href="/#curriculum">Curriculum</a></li>
-								<li><a href="/#portfolios">Projects</a></li>
-								<li><a href="/#non-profits">Non-profits</a></li>
-								<li><a href="/#sponsors">Sponsors</a></li>
-								<li>
-								<li>
-                            <a class="dropdown-toggle text-uppercase" data-toggle="dropdown" href="#">Members<span class="caret"></span></a>
-                            <ul class="dropdown-menu">
-                            <li><a class="dark" href="/rsvp/events">Events</a></li>
-                                {% if request.user.is_anonymous %}
-
-          						<li><a class="dark" href="/accounts/login/">Login</a></li>
-          						<li ><a  class="dark" href="/accounts/register/">Register</a></li>
-					          {% endif %}
-					          {% if not request.user.is_anonymous %}
-					            <li><a class="dark" href="/rsvp/myevents">{{ request.user }}</a></li>
-					            <li><a href="{% url 'accounts:logout' %}">Logout</a></li>
-					          {% endif %}
+        <div class="loader">
+            <div class="spinner">
+                <div class="double-bounce1"></div>
+                <div class="double-bounce2"></div>
+            </div>
+        </div>
+        <div class="nav-container">
+            <nav class="top-bar overlay-bar">
+                <div class="container">
+                    <div class="row nav-menu">
+                        <div class="col-md-3 col-sm-3 columns">
+                            <img class="logo logo-light" alt="Logo" src="{% static 'landingsite/images/dgseoul-transparent-orange.png' %}">
+                            <img class="logo logo-dark" alt="Logo" src="{% static 'landingsite/images/dgseoul-transparent-orange.png' %}">
+                        </div>
+                        <div class="col-md-9 col-sm-9 columns">
+                            <ul class="menu">
+                                <li><a href="/#team">Team</a></li>
+                                <li><a href="/#curriculum">Curriculum</a></li>
+                                <li><a href="/#portfolios">Projects</a></li>
+                                <li><a href="/#non-profits">Non-profits</a></li>
+                                <li><a href="/#sponsors">Sponsors</a></li>
+                                <li>
+                                    <a class="dropdown-toggle text-uppercase" data-toggle="dropdown" href="#">Meet-ups-<span class="caret"></span></a>
+                                    <ul class="dropdown-menu">
+                                        <li><a class="dark" href="/rsvp/events">Events</a></li>
+                                        {% if request.user.is_anonymous %}
+                                        <li><a class="dark" href="/accounts/login/">Login</a></li>
+                                        <li ><a  class="dark" href="/accounts/register/">Register</a></li>
+                                        {% endif %}
+                                        {% if not request.user.is_anonymous %}
+                                        <li><a class="dark" href="/rsvp/myevents">{{ request.user }}</a></li>
+                                        <li><a href="{% url 'accounts:logout' %}">Logout</a></li>
+                                        {% endif %}
+                                    </ul>
+                                    <!--dropdown menu-->
+                                </li>
+                                <!--meetups dropdown-->
                             </ul>
-							{% if messages %}
-          					<ul class="messages ">
-              				{% for message in messages %}
-              				<li{% if message.tags %} class=" dark {{ message.tags }}"{% endif %}>{{ message }}</li>
-              			{% endfor %}
-          				</ul>
-          				{% endif %}
-							<ul class="social-icons text-right">
-								<li>
-									<a href="http://twitter.com/djangogirlseoul" target="_blank">
-										<i class="icon social_twitter"></i>
-									</a>
-								</li>
-
-								<li>
-									<a href="http://facebook.com/djangogirlsseoul" target="_blank">
-										<i class="icon social_facebook"></i>
-									</a>
-								</li>
-
-								<li>
-									<a href="https://instagram.com/djangogirlsseoul" target="_blank">
-										<i class="icon social_instagram"></i>
-									</a>
-								</li>
-							</ul>
-						</div>
-					</div>
-
-					<div class="mobile-toggle">
-						<i class="icon icon_menu"></i>
-					</div>
-
-				</div>
-			</nav>
-			</div>
-
-    {% block canonical_link %}{% endblock canonical_link %}
-
-    {% block fb_tags %}{% endblock fb_tags %}
-			{% block content %}
-			{% endblock content%}
-
-<div class="footer-container text-center">
-			<footer class="bg-primary short-2">
-				<div class="container">
-					<div class="row">
-						<div class="col-sm-3">
-						<h3>Django Girls Seoul</h3>
-							<ul>
-								<li><a href="mailto:seoul@djangogirls.org">seoul@djangogirls.org</a></li>
-								<li><a href="https://djangogirls.org/pages/coc/">Code of Conduct</a></li>
-								<li><a href="https://djangogirls.org">Global Django Girls</a></li>
-								<li><a href="https://djangogirls.org/seoul">Official Workshop Site</a></li>
-						</div>
-						<div class="col-sm-3">
-							<h3>Resources</h3>
-							<ul>
-								<li><a href="http://tutorial.djangogirls.org/">Tutorial</a></li>
-								<li><a href="https://www.gitbook.com/book/djangogirls/django-girls-tutorial-extensions/details">Extended Material</a></li>
-								<li><a href="https://github.com/djangogirlscodecamp/curriculum">CodeCamp Curriculum</a></li>
-								<li><a href="https://github.com/djangogirlscodecamp/resources">Other Resources</a></li>
-							</ul>
-						</div>
-						<div class="col-sm-3">
-							<h3>Community</h3>
-							<ul>
-								<li><a href="https://www.facebook.com/djangogirlsseoul">Facebook</a></li>
-								<li><a href="https://twitter.com/djangogirlseoul">Twitter</a></li>
-								<li><a href="https://github.com/djangogirlscodecamp">GitHub</a></li>
-
-								<!-- <li><a href="">InstaGram</a></li> -->
-							</ul>
-						</div>
-						<div class="col-sm-3">
-						<h3>Our Numbers: </h3>
-							<ul>
-							<li><p><strong>160 Attendees</strong></p></li>
-							<li><p><strong>4 Events</strong></p></li>
-							<li><p><strong>500 Applicants</strong></p></li>
-							</ul>
-						</div>
-					</div>
-				</div>
-
-			</footer>
-		</div>
-
-		<script src="https://www.youtube.com/iframe_api' %}"></script>
-		<script src="{% static 'landingsite/js/jquery.min.js' %}"></script>
+                            <!-- menu-->
+                            <ul class="social-icons text-right">
+                                <li>
+                                    <a href="http://twitter.com/djangogirlseoul" target="_blank">
+                                    <i class="icon social_twitter"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="http://facebook.com/djangogirlsseoul" target="_blank">
+                                    <i class="icon social_facebook"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="https://instagram.com/djangogirlsseoul" target="_blank">
+                                    <i class="icon social_instagram"></i>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                        <!--9 colums -->
+                    </div>
+                    <!--row nav menu-->
+                    <div class="mobile-toggle">
+                        <i class="icon icon_menu"></i>
+                    </div>
+                    <!--mobile toggle-->
+                </div>
+                <!-- container -->
+            </nav>
+            <!--nav  -->
+        </div>
+        <!--nav container -->
+        {% block canonical_link %}{% endblock canonical_link %}
+        {% block fb_tags %}{% endblock fb_tags %}
+        {% block content %}
+        {% endblock content%}
+        <div class="footer-container text-center">
+            <footer class="bg-primary short-2">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-sm-3">
+                            <h3>Django Girls Seoul</h3>
+                            <ul>
+                            <li><a href="mailto:seoul@djangogirls.org">seoul@djangogirls.org</a></li>
+                            <li><a href="https://djangogirls.org/pages/coc/">Code of Conduct</a></li>
+                            <li><a href="https://djangogirls.org">Global Django Girls</a></li>
+                            <li><a href="https://djangogirls.org/seoul">Official Workshop Site</a></li>
+                        </div>
+                        <div class="col-sm-3">
+                            <h3>Resources</h3>
+                            <ul>
+                                <li><a href="http://tutorial.djangogirls.org/">Tutorial</a></li>
+                                <li><a href="https://www.gitbook.com/book/djangogirls/django-girls-tutorial-extensions/details">Extended Material</a></li>
+                                <li><a href="https://github.com/djangogirlscodecamp/curriculum">CodeCamp Curriculum</a></li>
+                                <li><a href="https://github.com/djangogirlscodecamp/resources">Other Resources</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-sm-3">
+                            <h3>Community</h3>
+                            <ul>
+                                <li><a href="https://www.facebook.com/djangogirlsseoul">Facebook</a></li>
+                                <li><a href="https://twitter.com/djangogirlseoul">Twitter</a></li>
+                                <li><a href="https://github.com/djangogirlscodecamp">GitHub</a></li>
+                                <!-- <li><a href="">InstaGram</a></li> -->
+                            </ul>
+                        </div>
+                        <div class="col-sm-3">
+                            <h3>Our Numbers: </h3>
+                            <ul>
+                                <li>
+                                    <p><strong>160 Attendees</strong></p>
+                                </li>
+                                <li>
+                                    <p><strong>4 Events</strong></p>
+                                </li>
+                                <li>
+                                    <p><strong>500 Applicants</strong></p>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </footer>
+        </div>
+        <script src="https://www.youtube.com/iframe_api' %}"></script>
+        <script src="{% static 'landingsite/js/jquery.min.js' %}"></script>
         <script src="{% static 'landingsite/js/jquery.plugin.min.js' %}"></script>
         <script src="{% static 'landingsite/js/bootstrap.min.js' %}"></script>
         <script src="{% static 'landingsite/js/jquery.flexslider-min.js' %}"></script>
@@ -202,7 +207,6 @@
         <script src="{% static 'landingsite/js/lightbox.min.js' %}"></script>
         <script src="{% static 'landingsite/js/jquery.countdown.min.js' %}"></script>
         <script src="{% static 'landingsite/js/scripts.js' %}"></script>
-         {% block endjs %}{% endblock endjs %}
+        {% block endjs %}{% endblock endjs %}
     </body>
 </html>
-
