--- a/landingsite/static/landingsite/css/custom.css
+++ b/landingsite/static/landingsite/css/custom.css
@@ -36,7 +36,12 @@ footer h3{
     background:rgba(255,255,255,.5)
     border-radius: 5px;
 }
-
+.titlerow {
+    padding-top: 150px;
+}
+.login {
+    padding:20px;
+}
 .portimg {
     max-width: 300px;
     max-height: 300px;
