--- a/rsvp/static/rsvp/css/event_list.css
+++ b/rsvp/static/rsvp/css/event_list.css
@@ -1,12 +1,3 @@
-#calendar {
-  padding-top:50px;
-  padding-bottom:50px;
-  color:black;
-}
-.fc-unthemed .fc-divider, .fc-unthemed .fc-popover, .fc-unthemed .fc-row, .fc-unthemed tbody, .fc-unthemed td, .fc-unthemed th, .fc-unthemed thead {
-  border-color: black;
-}
-
 .titlerow {
   padding-top: 200px;
 }
@@ -18,12 +9,10 @@
   height: 350px;
   /*color: white;*/
 }
+
+/*made a fixed min height for my events - looks bad if not many listed*/
 .myeventscontainer {
   min-height: 300px;
-  padding-top:30px;
-}
-.myeventlist{
-  width:70%;
 }
 .fc-day {
   border-color:black;
