minor improvements in view and template

--- a/code4every1site/templates/base.html
+++ b/code4every1site/templates/base.html
@@ -3,6 +3,8 @@
 <html class="no-js">
     <head>
         <meta name="mobile-web-app-capable" content="yes">
+        <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate, post-check=0, pre-check=0" /> 
+        <meta http-equiv="Pragma" content="no-cache" />
         <link rel="shortcut icon" href="{% static 'landingsite/images/favicon.ico' %}" type="image/x-icon">
         <link rel="icon" href="{% static 'landingsite/images/favicon.ico' %}" type="image/x-icon">
         <!-- Add to homescreen for Safari on iOS -->
