form cleanup - change name of the site

--- a/accounts/templates/registration/register.html
+++ b/accounts/templates/registration/register.html
@@ -15,22 +15,21 @@
     <div class="mdl-grid">
       <div class="mdl-cell mdl-cell--4-col"></div>
       <div class="mdl-cell mdl-cell--4-col">
-        <h2>Register</h2>
         {% if form.errors %}
-        <p>Fix below issues and try again.</p>
+        <p style="color: red;">Fix below issues and try again.</p>
         {% endif %}
         <form method="post" action="{% url 'accounts:register' %}">
             {% csrf_token %}
             {% for field in form %}
-              <div class="mdl-textfield mdl-js-textfield">
-                {{ field|addcss:"mdl-textfield__input" }}
-                <label class="mdl-textfield__label" for="{{field.id_for_label}}">{{ field.label }}</label>
+              <div class="form-group">
+                <label for="{{field.id_for_label}}">{{ field.label }}</label>
+                {{ field|addcss:"form-control" }}
                 {{ field.errors }}
               </div>
             {% endfor %}
             <div>
               <input type="hidden" name="next" value="{% url 'landingsite:index' %}" />
-              <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored" type="submit">
+              <button class="btn btn-default" type="submit">
                 Submit
               </button>
             </div>
