--- a/code4every1site/templates/base.html
+++ b/code4every1site/templates/base.html
@@ -22,7 +22,7 @@
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,400,300,600,700%7CRaleway:700' rel='stylesheet' type='text/css'>
         <script src="{% static 'landingsite/js/modernizr-2.6.2-respond-1.1.0.min.js' %}"></script>
         <meta charset="utf-8">
-        <title>Django Girls Seoul Code Camp</title>
+        <title>Django Girls Seoul</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
