--- a/landingsite/templates/landingsite/index.html
+++ b/landingsite/templates/landingsite/index.html
@@ -10,7 +10,7 @@
             <div class="row">
                 <div class="col-md-12 text-center">
                     <span class="text-white alt-font"> </span>
-                    <h1 class="text-white">Django Girls Code Camp<br><br></h1>
+                    <h1 class="text-white">Django Girls Seoul<br><br></h1>
                     <p class="lead text-white">We want to inspire women to fall in love with programming.</p>
                     <a href="#team" class="btn btn-primary btn-white">Meet the Coaches!</a>
                     <a href="#curriculum" class="btn btn-primary btn-filled">See our Curriculum</a>
