hot-fix for tag in index.html

--- a/landingsite/templates/landingsite/index.html
+++ b/landingsite/templates/landingsite/index.html
@@ -1,7 +1,5 @@
 {% extends "base.html" %}
 {% load staticfiles %}
-{% extends "base.html" %}
-{% load staticfiles %}
 {% block content %}
 <div class="main-container">
     <header class="fullscreen-element no-pad centered-text">
@@ -18,6 +16,7 @@
                     <a href="#curriculum" class="btn btn-primary btn-filled">See our Curriculum</a>
                 </div>
             </div>
+        </div>
             <div class="container align-vertical">
                 <div class="row">
                     <div class="col-md-12 text-center">
